deploy: 9ef9077b180d7432ee6632bfd3fb724d4c85463a

--- a/genindex.html
+++ b/genindex.html
@@ -71,8 +71,336 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#K"><strong>K</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.a">a (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_0">alpha_0 (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_f_max">alpha_f_max (flight_mech.plane.Plane property)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_stall">alpha_stall (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.b">b (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.c">c (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_D">C_D() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_D_0">C_D_0 (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_L">C_L() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_L_alpha">C_L_alpha (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_L_delta">C_L_delta (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_L_f_max">C_L_f_max (flight_mech.plane.Plane property)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_L_max">C_L_max (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_m_0">C_m_0 (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_m_alpha">C_m_alpha (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_m_delta">C_m_delta (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_air_density_from_altitude">compute_air_density_from_altitude() (in module flight_mech.atmosphere)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_alpha_and_delta_at_flight_point">compute_alpha_and_delta_at_flight_point() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (in module flight_mech.atmosphere)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ascension_slope">compute_ascension_slope() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag">compute_drag() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag_with_ground_effect">compute_drag_with_ground_effect() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_endurance">compute_endurance() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_gliding_speed">compute_gliding_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_gliding_v_z_min">compute_gliding_v_z_min() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ground_effect">compute_ground_effect() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_distance">compute_landing_distance() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_load_factor_from_roll_angle">compute_load_factor_from_roll_angle() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_altitude">compute_max_altitude() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_ascension_slope">compute_max_ascension_slope() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_ascension_speed">compute_max_ascension_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_gliding_range">compute_max_gliding_range() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_gliding_time">compute_max_gliding_time() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_range_at_fixed_altitude">compute_max_range_at_fixed_altitude() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_min_descent_gliding_slope">compute_min_descent_gliding_slope() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_min_thrust_needed">compute_min_thrust_needed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_normalized_thrust">compute_normalized_thrust() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_range_at_fixed_speed">compute_range_at_fixed_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_reference_speed">compute_reference_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_sigma_from_altitude">compute_sigma_from_altitude() (in module flight_mech.atmosphere)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_speed_for_max_ascension_speed">compute_speed_for_max_ascension_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_speed_for_min_power_needed">compute_speed_for_min_power_needed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_speed_for_min_thrust_needed">compute_speed_for_min_thrust_needed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_stall_speed">compute_stall_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_take_off_distance_no_friction">compute_take_off_distance_no_friction() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_take_off_distance_with_friction">compute_take_off_distance_with_friction() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_take_off_speed">compute_take_off_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_thrust">compute_thrust() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_thrust_needed">compute_thrust_needed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_v_at_gliding_v_z_min">compute_v_at_gliding_v_z_min() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_velocity_interval_for_fixed_thrust">compute_velocity_interval_for_fixed_thrust() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.engine_type">engine_type (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.extension">extension (flight_mech.plane.Plane property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.f">f() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.f_max">f_max (flight_mech.plane.Plane property)</a>
+</li>
+      <li>
+    flight_mech
+
+      <ul>
+        <li><a href="flight_mech.html#module-flight_mech">module</a>
+</li>
+      </ul></li>
+      <li>
+    flight_mech.atmosphere
+
+      <ul>
+        <li><a href="flight_mech.atmosphere.html#module-flight_mech.atmosphere">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    flight_mech.plane
+
+      <ul>
+        <li><a href="flight_mech.plane.html#module-flight_mech.plane">module</a>
+</li>
+      </ul></li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.fuel_specific_conso">fuel_specific_conso (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.fuel_specific_conso_SI">fuel_specific_conso_SI (flight_mech.plane.Plane property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.ground_effect_coefficient">ground_effect_coefficient (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.k">k (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.load_plane_data">load_plane_data() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.m">m (flight_mech.plane.Plane property)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.m_empty">m_empty (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.m_fuel">m_fuel (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.m_payload">m_payload (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="flight_mech.html#module-flight_mech">flight_mech</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#module-flight_mech.atmosphere">flight_mech.atmosphere</a>
+</li>
+        <li><a href="flight_mech.plane.html#module-flight_mech.plane">flight_mech.plane</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.n">n() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.nb_engines">nb_engines (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.P">P (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane">Plane (class in flight_mech.plane)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_gliding_TV_graph">plot_gliding_TV_graph() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_gliding_WV_graph">plot_gliding_WV_graph() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_polar_graph">plot_polar_graph() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.S">S (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.thrust_per_engine">thrust_per_engine (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.update_C_L_max">update_C_L_max() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.update_ground_effect_coefficient">update_ground_effect_coefficient() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.update_k">update_k() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.update_P">update_P() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.update_variables">update_variables() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.v">v() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.wing_shape_coefficient">wing_shape_coefficient (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.wing_to_ground_height">wing_to_ground_height (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
