--- a/_modules/flight_mech/plane.html
+++ b/_modules/flight_mech/plane.html
@@ -91,7 +91,7 @@
 
 <span class="c1"># Local imports #</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">.atmosphere</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flight_mech.atmosphere</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
     <span class="n">compute_air_density_from_altitude</span><span class="p">,</span>
     <span class="n">compute_altitude_from_sigma</span><span class="p">,</span>
     <span class="n">compute_sigma_from_altitude</span>
