--- a/_modules/index.html
+++ b/_modules/index.html
@@ -68,7 +68,8 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="flight_mech/atmosphere.html">flight_mech.atmosphere</a></li>
+<ul><li><a href="flight_mech/airfoil.html">flight_mech.airfoil</a></li>
+<li><a href="flight_mech/atmosphere.html">flight_mech.atmosphere</a></li>
 <li><a href="flight_mech/plane.html">flight_mech.plane</a></li>
 </ul>
 
