--- a/genindex.html
+++ b/genindex.html
@@ -74,19 +74,23 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#X"><strong>X</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -94,10 +98,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.a">a (flight_mech.plane.Plane attribute)</a>
 </li>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_0">alpha_0 (flight_mech.plane.Plane attribute)</a>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil">Airfoil (class in flight_mech.airfoil)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_0">alpha_0 (flight_mech.plane.Plane attribute)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_f_max">alpha_f_max (flight_mech.plane.Plane property)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_stall">alpha_stall (flight_mech.plane.Plane attribute)</a>
@@ -138,7 +144,15 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_m_delta">C_m_delta (flight_mech.plane.Plane attribute)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.camber_z_array">camber_z_array (flight_mech.airfoil.Airfoil property)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.chord_length">chord_length (flight_mech.airfoil.Airfoil property)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.chord_z_array">chord_z_array (flight_mech.airfoil.Airfoil property)</a>
+</li>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_air_density_from_altitude">compute_air_density_from_altitude() (in module flight_mech.atmosphere)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_airfoil_fourrier_coefficients">compute_airfoil_fourrier_coefficients() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_alpha_and_delta_at_flight_point">compute_alpha_and_delta_at_flight_point() (flight_mech.plane.Plane method)</a>
 </li>
@@ -166,6 +180,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_lift_coefficient">compute_lift_coefficient() (flight_mech.airfoil.Airfoil method)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_load_factor_from_roll_angle">compute_load_factor_from_roll_angle() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_max_altitude">compute_max_altitude() (flight_mech.plane.Plane method)</a>
@@ -183,6 +199,10 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_min_descent_gliding_slope">compute_min_descent_gliding_slope() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_min_thrust_needed">compute_min_thrust_needed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_momentum_coefficient_at_aero_center">compute_momentum_coefficient_at_aero_center() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_momentum_coefficient_at_leading_edge">compute_momentum_coefficient_at_leading_edge() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_normalized_thrust">compute_normalized_thrust() (flight_mech.plane.Plane method)</a>
 </li>
@@ -214,6 +234,16 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_velocity_interval_for_fixed_thrust">compute_velocity_interval_for_fixed_thrust() (flight_mech.plane.Plane method)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.convert_float_or_none_to_string">convert_float_or_none_to_string() (in module flight_mech.airfoil)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.download_web_file">download_web_file() (in module flight_mech.airfoil)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -225,6 +255,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.extension">extension (flight_mech.plane.Plane property)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.extrados_z_array">extrados_z_array (flight_mech.airfoil.Airfoil attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -244,14 +276,21 @@
 </li>
       </ul></li>
       <li>
+    flight_mech.airfoil
+
+      <ul>
+        <li><a href="flight_mech.airfoil.html#module-flight_mech.airfoil">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     flight_mech.atmosphere
 
       <ul>
         <li><a href="flight_mech.atmosphere.html#module-flight_mech.atmosphere">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     flight_mech.plane
 
@@ -274,6 +313,20 @@
   </ul></td>
 </tr></table>
 
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.import_from_airfoiltools">import_from_airfoiltools() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.import_xz_selig_arrays">import_xz_selig_arrays() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.intrados_z_array">intrados_z_array (flight_mech.airfoil.Airfoil attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -285,7 +338,15 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.list_airfoils_in_database">list_airfoils_in_database() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.load_database_airfoil">load_database_airfoil() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.load_plane_data">load_plane_data() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.load_selig_file">load_selig_file() (flight_mech.airfoil.Airfoil method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -301,13 +362,23 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.m_payload">m_payload (flight_mech.plane.Plane attribute)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.max_camber">max_camber (flight_mech.airfoil.Airfoil property)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.max_camber_location">max_camber_location (flight_mech.airfoil.Airfoil property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.max_thickness">max_thickness (flight_mech.airfoil.Airfoil property)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.max_thickness_location">max_thickness_location (flight_mech.airfoil.Airfoil property)</a>
+</li>
       <li>
     module
 
       <ul>
         <li><a href="flight_mech.html#module-flight_mech">flight_mech</a>
+</li>
+        <li><a href="flight_mech.airfoil.html#module-flight_mech.airfoil">flight_mech.airfoil</a>
 </li>
         <li><a href="flight_mech.atmosphere.html#module-flight_mech.atmosphere">flight_mech.atmosphere</a>
 </li>
@@ -324,6 +395,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.name">name (flight_mech.airfoil.Airfoil attribute)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.nb_engines">nb_engines (flight_mech.plane.Plane attribute)</a>
 </li>
   </ul></td>
@@ -336,6 +409,8 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane">Plane (class in flight_mech.plane)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.plot">plot() (flight_mech.airfoil.Airfoil method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_gliding_TV_graph">plot_gliding_TV_graph() (flight_mech.plane.Plane method)</a>
@@ -343,6 +418,18 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_gliding_WV_graph">plot_gliding_WV_graph() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_polar_graph">plot_polar_graph() (flight_mech.plane.Plane method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.re_interpolate">re_interpolate() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.re_interpolate_with_cosine_distribution">re_interpolate_with_cosine_distribution() (flight_mech.airfoil.Airfoil method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -397,6 +484,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.wing_to_ground_height">wing_to_ground_height (flight_mech.plane.Plane attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="X">X</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.x_array">x_array (flight_mech.airfoil.Airfoil property)</a>
 </li>
   </ul></td>
 </tr></table>
