deploy: 1dcac4d9821cead54a419e1d29c4704404660022

--- a/genindex.html
+++ b/genindex.html
@@ -163,6 +163,8 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_alpha_and_delta_at_flight_point">compute_alpha_and_delta_at_flight_point() (flight_mech.plane.Plane method)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_alpha_zero_lift">compute_alpha_zero_lift() (flight_mech.airfoil.Airfoil method)</a>
+</li>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (in module flight_mech.atmosphere)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ascension_slope">compute_ascension_slope() (flight_mech.plane.Plane method)</a>
@@ -183,10 +185,10 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
+</li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_lift_coefficient">compute_lift_coefficient() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_load_factor_from_roll_angle">compute_load_factor_from_roll_angle() (flight_mech.plane.Plane method)</a>
@@ -314,6 +316,10 @@
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_rotated_selig_arrays">get_rotated_selig_arrays() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.ground_effect_coefficient">ground_effect_coefficient (flight_mech.plane.Plane attribute)</a>
 </li>
