deploy: 0ef2f110a89fb11215143ee03c710506ddbdc26f

--- a/_modules/flight_mech/airfoil.html
+++ b/_modules/flight_mech/airfoil.html
@@ -141,6 +141,9 @@
 <div class="viewcode-block" id="Airfoil">
 <a class="viewcode-back" href="../../flight_mech.airfoil.html#flight_mech.airfoil.Airfoil">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Airfoil</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Class to define an airfoil and compute its characteristics.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">extrados_z_array</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">intrados_z_array</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span>
