--- a/genindex.html
+++ b/genindex.html
@@ -119,6 +119,8 @@
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.aspect_ratio">aspect_ratio (flight_mech.wing.Wing property)</a>
 </li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.atm_model">atm_model (flight_mech.plane.Plane attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -173,23 +175,33 @@
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.chord_z_array">chord_z_array (flight_mech.airfoil.Airfoil property)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_air_density_from_altitude">compute_air_density_from_altitude() (in module flight_mech.atmosphere)</a>
-</li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_airfoil_fourrier_coefficients">compute_airfoil_fourrier_coefficients() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_alpha_and_delta_at_flight_point">compute_alpha_and_delta_at_flight_point() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_alpha_zero_lift">compute_alpha_zero_lift() (flight_mech.airfoil.Airfoil method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (in module flight_mech.atmosphere)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+
+      <ul>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_altitude_from_sigma">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
 </li>
+      </ul></li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ascension_slope">compute_ascension_slope() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.compute_chord_min_and_max_for_trapezoidal_wing">compute_chord_min_and_max_for_trapezoidal_wing() (in module flight_mech.wing)</a>
 </li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_density_from_altitude">compute_density_from_altitude() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+
+      <ul>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_density_from_altitude">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
+</li>
+      </ul></li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag">compute_drag() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag_with_ground_effect">compute_drag_with_ground_effect() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_dynamic_viscosity_from_altitude">compute_dynamic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_endurance">compute_endurance() (flight_mech.plane.Plane method)</a>
 </li>
@@ -200,6 +212,8 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_gliding_v_z_min">compute_gliding_v_z_min() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ground_effect">compute_ground_effect() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_kinematic_viscosity_from_altitude">compute_kinematic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_distance">compute_landing_distance() (flight_mech.plane.Plane method)</a>
 </li>
@@ -237,11 +251,19 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_normalized_thrust">compute_normalized_thrust() (flight_mech.plane.Plane method)</a>
 </li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_pressure_from_altitude">compute_pressure_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_range_at_fixed_speed">compute_range_at_fixed_speed() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_reference_speed">compute_reference_speed() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.compute_sigma_from_altitude">compute_sigma_from_altitude() (in module flight_mech.atmosphere)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_sigma_from_altitude">compute_sigma_from_altitude() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+
+      <ul>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sigma_from_altitude">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
+</li>
+      </ul></li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sound_speed_from_altitude">compute_sound_speed_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_speed_for_max_ascension_speed">compute_speed_for_max_ascension_speed() (flight_mech.plane.Plane method)</a>
 </li>
@@ -256,6 +278,8 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_take_off_distance_with_friction">compute_take_off_distance_with_friction() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_take_off_speed">compute_take_off_speed() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_temperature_from_altitude">compute_temperature_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_thrust">compute_thrust() (flight_mech.plane.Plane method)</a>
 </li>
@@ -354,10 +378,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_rotated_selig_arrays">get_rotated_selig_arrays() (flight_mech.airfoil.Airfoil method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.gamma">gamma (flight_mech.atmosphere.StandardAtmosphere attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_rotated_selig_arrays">get_rotated_selig_arrays() (flight_mech.airfoil.Airfoil method)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.ground_effect_coefficient">ground_effect_coefficient (flight_mech.plane.Plane attribute)</a>
 </li>
   </ul></td>
@@ -391,6 +417,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.leading_edge_x_array">leading_edge_x_array (flight_mech.wing.Wing property)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere">LinearAtmosphere (class in flight_mech.atmosphere)</a>
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.list_airfoils_in_database">list_airfoils_in_database() (flight_mech.airfoil.Airfoil method)</a>
 </li>
@@ -441,6 +469,8 @@
         <li><a href="flight_mech.wing.html#module-flight_mech.wing">flight_mech.wing</a>
 </li>
       </ul></li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.mu_0">mu_0 (flight_mech.atmosphere.StandardAtmosphere attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -493,6 +523,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.r">r (flight_mech.atmosphere.StandardAtmosphere attribute)</a>
+</li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.re_interpolate">re_interpolate() (flight_mech.airfoil.Airfoil method)</a>
 
       <ul>
@@ -505,6 +537,12 @@
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.reference_surface">reference_surface (flight_mech.wing.Wing property)</a>
 </li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.rho_0">rho_0 (flight_mech.atmosphere.LinearAtmosphere attribute)</a>
+
+      <ul>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.rho_0">(flight_mech.atmosphere.StandardAtmosphere attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -515,9 +553,11 @@
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.save_3D_shape">save_3D_shape() (flight_mech.wing.Wing method)</a>
 </li>
+      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.single_side_surface">single_side_surface (flight_mech.wing.Wing property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.single_side_surface">single_side_surface (flight_mech.wing.Wing property)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere">StandardAtmosphere (class in flight_mech.atmosphere)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.sweep_angle_at_leading_edge">sweep_angle_at_leading_edge (flight_mech.wing.Wing property)</a>
 </li>
