deploy: 29a38cdf365e28f5879b788ddf864c855a75ac31

--- a/genindex.html
+++ b/genindex.html
@@ -111,15 +111,17 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_0">alpha_0 (flight_mech.plane.Plane attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_f_max">alpha_f_max (flight_mech.plane.Plane property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_stall">alpha_stall (flight_mech.plane.Plane attribute)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.aspect_ratio">aspect_ratio (flight_mech.wing.Wing property)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.atm_model">atm_model (flight_mech.plane.Plane attribute)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere">Atmosphere (class in flight_mech.atmosphere)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -181,27 +183,35 @@
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.compute_alpha_zero_lift">compute_alpha_zero_lift() (flight_mech.airfoil.Airfoil method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere.compute_altitude_from_sigma">compute_altitude_from_sigma() (flight_mech.atmosphere.Atmosphere static method)</a>
 
       <ul>
-        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_altitude_from_sigma">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere.compute_altitude_from_sigma">(flight_mech.atmosphere.ConstantAtmosphere static method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_altitude_from_sigma">(flight_mech.atmosphere.LinearAtmosphere static method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_altitude_from_sigma">(flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       </ul></li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ascension_slope">compute_ascension_slope() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.compute_chord_min_and_max_for_trapezoidal_wing">compute_chord_min_and_max_for_trapezoidal_wing() (in module flight_mech.wing)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_density_from_altitude">compute_density_from_altitude() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere.compute_density_from_altitude">compute_density_from_altitude() (flight_mech.atmosphere.Atmosphere class method)</a>
 
       <ul>
-        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_density_from_altitude">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere.compute_density_from_altitude">(flight_mech.atmosphere.ConstantAtmosphere class method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_density_from_altitude">(flight_mech.atmosphere.LinearAtmosphere class method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_density_from_altitude">(flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       </ul></li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag">compute_drag() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_drag_with_ground_effect">compute_drag_with_ground_effect() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_dynamic_viscosity_from_altitude">compute_dynamic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_dynamic_viscosity_from_altitude">compute_dynamic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_endurance">compute_endurance() (flight_mech.plane.Plane method)</a>
 </li>
@@ -213,14 +223,14 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_ground_effect">compute_ground_effect() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_kinematic_viscosity_from_altitude">compute_kinematic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_kinematic_viscosity_from_altitude">compute_kinematic_viscosity_from_altitude() (flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_distance">compute_landing_distance() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
+</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.compute_lift_and_induced_drag_coefficients">compute_lift_and_induced_drag_coefficients() (flight_mech.wing.Wing method)</a>
@@ -257,13 +267,17 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_reference_speed">compute_reference_speed() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_sigma_from_altitude">compute_sigma_from_altitude() (flight_mech.atmosphere.LinearAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere.compute_sigma_from_altitude">compute_sigma_from_altitude() (flight_mech.atmosphere.Atmosphere static method)</a>
 
       <ul>
-        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sigma_from_altitude">(flight_mech.atmosphere.StandardAtmosphere static method)</a>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere.compute_sigma_from_altitude">(flight_mech.atmosphere.ConstantAtmosphere static method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.compute_sigma_from_altitude">(flight_mech.atmosphere.LinearAtmosphere static method)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sigma_from_altitude">(flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       </ul></li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sound_speed_from_altitude">compute_sound_speed_from_altitude() (flight_mech.atmosphere.StandardAtmosphere static method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.compute_sound_speed_from_altitude">compute_sound_speed_from_altitude() (flight_mech.atmosphere.StandardAtmosphere class method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_speed_for_max_ascension_speed">compute_speed_for_max_ascension_speed() (flight_mech.plane.Plane method)</a>
 </li>
@@ -288,6 +302,8 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_v_at_gliding_v_z_min">compute_v_at_gliding_v_z_min() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_velocity_interval_for_fixed_thrust">compute_velocity_interval_for_fixed_thrust() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere">ConstantAtmosphere (class in flight_mech.atmosphere)</a>
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.convert_float_or_none_to_string">convert_float_or_none_to_string() (in module flight_mech.airfoil)</a>
 </li>
@@ -379,6 +395,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.gamma">gamma (flight_mech.atmosphere.StandardAtmosphere attribute)</a>
+</li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_chord_incidence">get_chord_incidence() (flight_mech.airfoil.Airfoil method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -531,18 +549,24 @@
         <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.re_interpolate">(flight_mech.wing.Wing method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.re_interpolate_with_cosine_distribution">re_interpolate_with_cosine_distribution() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.reference_surface">reference_surface (flight_mech.wing.Wing property)</a>
 </li>
-      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.rho_0">rho_0 (flight_mech.atmosphere.LinearAtmosphere attribute)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere.rho_0">rho_0 (flight_mech.atmosphere.Atmosphere attribute)</a>
 
       <ul>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere.rho_0">(flight_mech.atmosphere.ConstantAtmosphere attribute)</a>
+</li>
+        <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.LinearAtmosphere.rho_0">(flight_mech.atmosphere.LinearAtmosphere attribute)</a>
+</li>
         <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere.rho_0">(flight_mech.atmosphere.StandardAtmosphere attribute)</a>
 </li>
       </ul></li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.rotate_arrays">rotate_arrays() (in module flight_mech.airfoil)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -553,10 +577,12 @@
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.save_3D_shape">save_3D_shape() (flight_mech.wing.Wing method)</a>
 </li>
-      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.single_side_surface">single_side_surface (flight_mech.wing.Wing property)</a>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.set_chord_at_zero_incidence">set_chord_at_zero_incidence() (flight_mech.airfoil.Airfoil method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.single_side_surface">single_side_surface (flight_mech.wing.Wing property)</a>
+</li>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.StandardAtmosphere">StandardAtmosphere (class in flight_mech.atmosphere)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.sweep_angle_at_leading_edge">sweep_angle_at_leading_edge (flight_mech.wing.Wing property)</a>
@@ -571,10 +597,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.taper_ratio">taper_ratio (flight_mech.wing.Wing property)</a>
 </li>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.thrust_per_engine">thrust_per_engine (flight_mech.plane.Plane attribute)</a>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.thickness_array">thickness_array (flight_mech.airfoil.Airfoil property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.thrust_per_engine">thrust_per_engine (flight_mech.plane.Plane attribute)</a>
+</li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.trailing_edge_x_array">trailing_edge_x_array (flight_mech.wing.Wing property)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.twisting_angle_array">twisting_angle_array (flight_mech.wing.Wing attribute)</a>
