deploy: 60850277a96741e6dd61c2d19ff47ee540c391df

--- a/genindex.html
+++ b/genindex.html
@@ -227,10 +227,10 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_distance">compute_landing_distance() (flight_mech.plane.Plane method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.compute_lift_and_induced_drag_coefficients">compute_lift_and_induced_drag_coefficients() (flight_mech.wing.Wing method)</a>
@@ -302,6 +302,10 @@
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_v_at_gliding_v_z_min">compute_v_at_gliding_v_z_min() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_velocity_interval_for_fixed_thrust">compute_velocity_interval_for_fixed_thrust() (flight_mech.plane.Plane method)</a>
+</li>
+      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.compute_zero_lift_drag">compute_zero_lift_drag() (flight_mech.wing.Wing method)</a>
+</li>
+      <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.compute_zero_lift_drag_on_wing_slice">compute_zero_lift_drag_on_wing_slice() (flight_mech.wing.Wing method)</a>
 </li>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.ConstantAtmosphere">ConstantAtmosphere (class in flight_mech.atmosphere)</a>
 </li>
